--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 		</div>
 	</div>
 
-	<div class="container text-center">
+	<div class="container text-center py-3">
 		<h6 class="text-muted">2021 &copy; <a href="#" style="color:#4c6ef5">Sameer Valanju.</a> || All rights reserved.</h6>
 	</div>
 
